--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
-    
+    "lint": "next lint",
+    "postinstall":"npx prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
